--- a/src/public/css/confirm.css
+++ b/src/public/css/confirm.css
@@ -57,7 +57,7 @@
     color: #8B7969;
 }
 
-.confirm-table__textarea input {
+.confirm-table__textarea textarea {
     border: none;
     background: #FFFFFF;
     text-align: start;
@@ -67,6 +67,7 @@
     padding: 15px;
     font-size: 16px;
     color: #8B7969;
+    resize: none;
 }
 
 .form-submit {
